--- a/国考计算方法.md
+++ b/国考计算方法.md
@@ -1,5 +1,7 @@
-三级公立医院国考是怎么考的？“考卷”大解析 
+# 三级公立医院国考是怎么考的？“考卷”大解析 
 2020-08-18 19:01
+
+
 本文对考核指标进行简单介绍，也便于医院管理者在后续考核中能够明确目标，在医院建设和医院管理方面做到有的放矢。
 
 2020年7月1日，国家卫生健康委医政医管局发布《国家卫生健康委办公厅关于2018年度全国三级公立医院绩效考核国家监测分析有关情况的通报》。
@@ -10,9 +12,7 @@
 
 制度建设方面，国家做了建章立制和宣传培训工作；技术方面，主要是指标计算方面，依照考核步骤来说，包括了医院分类、确定规则、数据处理和评价比较四个环节。
 
-01
-
-制度方面
+## 01 制度方面
 
 从国家医政管理层面上看，是希望建立标准化和信息化考核支撑体系。围绕这个目标，国家医政管理部门做了以下两方面工作：
 
@@ -34,9 +34,7 @@
 
 针对数据质控发现的问题，督促各地、各医院限期整改，对三级医院进行集体约谈，并核减相应绩效考核分数。对数据存在严重失真的医院全国通报批评，绩效考核成绩计0分。如果是新建或搬迁等原因则不对其进行考核。
 
-02
-
-技术方面
+## 02 技术方面
 
 此次“国考”的数据采集和质控工作，从技术和制度两个方面做了大量工作，保障数据收集结果的真实客观公正。经各省级卫生健康委审核确认，全国共有2398家三级公立医院参加2018年度绩效考核工作。其收集超过2.6亿份病案首页，2147份财务报表，132万条绩效考核平台数据，3万余份绩效考核平台佐证材料。
 
@@ -62,9 +60,7 @@
 
 对被约谈的141家医院病案首页相关7个指标按照原得分的90%进行计分。所以，医院管理者不用担心因为病种难度提升导致的相关指标变化，可以放心收治疑难危重患者，并给予合理治疗。
 
-03
-
-提高数据质量的几点建议
+## 03 提高数据质量的几点建议
 
 在了解数据规则上，医院管理者需要做到以下几点：
 
@@ -74,6 +70,8 @@
 
 最后，流程上，需要设置填报和两道以上的审核关口。
 
+
+```
 专家介绍
 
 戴丁荣
@@ -85,3 +83,4 @@
 来源：医学界智库
 
 作者：戴丁荣
+```
