--- a/国家监测指标.md
+++ b/国家监测指标.md
@@ -1,6 +1,9 @@
 # 国家监测指标
 
-## 4.出院患者手术占比▲
+
+## (一)功能定位(指标 1-7)
+
+### 4.出院患者手术占比▲
 
 【指标属性】定量指标,国家监测指标。
 
@@ -31,11 +34,200 @@
 (3)手术和介入治疗统计按照《手术操作分类代码国家临
 床版 2.0》的目录实施。
 
+【指标意义】
+
+手术和介入治疗的数量尤其是疑难复杂手术和介入治疗的
+数量与医院的规模、人员、设备、设施等综合诊疗技术能力及临
+床管理流程成正相关,鼓励三级医院优质医疗资源服务于疑难危
+重患者,尤其是能够提供安全有保障的高质量医疗技术服务。
+
+【指标导向】逐步提高。
+
+【指标来源】病案首页。
+
+【指标解释】国家卫生健康委病案管理质量控制中心。
+
+
+### 5.出院患者微创手术占比▲
+
+【指标属性】定量指标,国家监测指标。
+
+【计量单位】百分比(%)
+
+【指标定义】
+
+考核年度出院患者实施微创手术8 台次数占同期出院患者手
+术台次数的比例。
+
+【计算方法】
+出院患者微创手术台次数
+出院患者微创手术占比 =
+ 同期出院患者手术台次数
+ × 100%
+
+【指标说明】
+
+(1)分子:出院患者微创手术台次数是指出院患者微创手
+术人数。同一次住院就诊期间患有同一疾病或不同疾病施行多次
+微创手术者,按 1 人统计。
+
+(2)分母:同期出院患者手术台次数是指出院患者手术(含
+介入)人数。
+
+(3)纳入本次考核的微创手术目录,将利用腹腔镜、胸腔
+镜、纵隔镜、神经内镜、关节镜等现代医疗器械及相关设备经非
+自然腔道入路进行的微创手术,结合《手术操作分类代码国家临
+床版 2.0》和大数据统计结果形成,由国家统一制定,仅用于国
+家三级公立医院绩效考核,并嵌入三级公立医院绩效考核信息系
+统。
+
+【指标意义】
+
+(1)微创手术降低了传统手术对人体的伤害,具有创伤小、
+疼痛轻、恢复快的优越性,极大地减少了疾病给患者带来的不便
+和痛苦,更注重患者的心理、社会、生理(疼痛)、精神、生活
+质量的改善与康复,减轻患者的痛苦。
+
+(2)合理选择微创技术适应症、控制相关技术风险促进微
+创技术发展。
+
+【指标导向】逐步提高。
+
+【指标来源】病案首页。
+
+【指标解释】国家卫生健康委病案管理质量控制中心。
+
+
+### 6.出院患者四级手术比例▲
+
+【指标属性】定量指标,国家监测指标。
+
+【计量单位】百分比(%)
+
+【指标定义】
+
+考核年度出院患者施行四级手术[^9] 台次数占同期出院患者手
+术台次数的比例。
+
+【计算方法】
+
+出院患者四级手术台次数
+出院患者四级手术比例 =
+ 同期出院患者手术台次数
+ × 100%
+
+【指标说明】
+
+(1)分子:出院患者四级手术台次数是指出院患者住院期
+间实施四级手术和按照四级手术管理的介入诊疗人数之和。
+
+(2)分母:同期出院患者手术台次数是指出院患者手术(含
+介入)人数。同一次住院就诊期间患有同一疾病或不同疾病施行
+多次手术者,按 1 人统计。
+
+(3)纳入本次考核的四级手术和按照四级手术管理的介入
+诊疗目录(简称四级手术目录)结合《手术操作分类代码国家临
+床版 2.0》和大数据统计结果形成,由国家统一制定,仅用于国
+家三级公立医院绩效考核,并嵌入三级公立医院绩效考核信息系
+统。
+
+【指标意义】
+
+《关于印发医疗机构手术分级管理办法(试行)的通知》
+ (卫
+办医政发〔2012〕94 号)提出医疗机构应当开展与其级别和诊
+疗科目相适应的手术。三级医院重点开展三、四级手术。《关于
+印发控制公立医院医疗费用不合理增长的若干意见》(国卫体改
+发〔2015〕89 号)要求对手术类型构成比进行监测比较,通过
+四级手术占比,衡量医院住院患者中实施复杂难度大的手术的情
+况。《国家卫生健康委办公厅关于印发心血管疾病介入等 4 个介
+入类诊疗技术临床应用管理规范的通知》(国卫办医函〔2019〕
+828 号),对心血管疾病介入、综合介入、外周血管介入和神经
+血管介入 4 个介入类诊疗技术临床应用管理规范进行了修订。该
+修订强化了医疗机构的主体责任,加强了对相关技术临床应用的
+事中事后监管措施,明确要求医疗机构将相关技术纳入手术分级
+管理。
+
+【指标导向】逐步提高。
+
+【指标来源】病案首页。
+
+【指标解释】国家卫生健康委病案管理质量控制中心。
+
+## (二)质量安全(指标 8-15)
+
+### 8.手术患者并发症发生率▲
+
+【指标属性】定量指标,国家监测指标。
+
+【计量单位】百分比(%)
+
+【指标定义】
+
+考核年度择期手术患者发生并发症[^11]例数占同期出院的手
+术患者人数的比例。
+
+【计算方法】
+
+手术患者并发症发生例数
+手术患者并发症发生率 =
+ 同期出院的手术患者人数
+ × 100%
+
+【指标说明】
+
+(1)分子:手术患者并发症发生例数是指择期手术和择期
+介入治疗患者并发症发生人数。统计住院病案首页中出院诊断符
+合“手术并发症诊断相关名称”且该诊断入院病情为“无”(代
+码为 4)的病例。同一患者在同一次住院发生多个入院病情为“无”
+的择期手术后并发症,按 1 人统计。
+
+(2)分母:同期出院的手术患者人数是指同期出院患者择
+期手术人数。统计单位以人数计算,总数为实施择期手术和介入
+治疗人数累加求和。不包括妊娠、分娩、围产期、新生儿患者。
+(3)本年度考核的手术并发症仅统计择期手术后,并发于
+手术或手术后的疾病或情况的人数。
+
+【指标意义】
+
+预防手术后并发症发生是医疗质量管理和监控的重点,也是
+患者安全管理的核心内容,是衡量医疗技术能力和管理水平的重
+要结果指标之一。《卫生部办公厅关于印发<三级综合医院评审
+标准实施细则(2011 年版)>的通知》(卫办医管发〔2011〕148
+号)对手术后并发症的风险评估和预防措施提出明确要求:(1)
+医务人员熟悉手术后常见并发症。(2)手术后并发症的预防措
+施落实到位。(3)对骨关节与脊柱等大型手术、高危手术患者
+有风险评估、有预防“深静脉血栓”“肺栓塞”的常规与措施。
+同时提出主管部门履行监管职责,并有分析、反馈和整改措施。
+有重大手术并发症的案例分析报告,持续改进术后质量管理,有
+效预防术后并发症,降低并发症的发生率。
+
+【指标导向】逐步降低。
+
+【指标来源】病案首页。
+
+【指标解释】国家卫生健康委病案管理质量控制中心。
+
+
 [^6] 根据《关于印发医疗机构手术分级管理办法(试行)的通知》(卫办医政发〔2012〕94 号)规
-定,手术是指医疗机构及其医务人员使用手术器械在人体局部进行操作,以去除病变组织、修复
+定,**手术**是指医疗机构及其医务人员使用手术器械在人体局部进行操作,以去除病变组织、修复
 损伤、移植组织或器官、植入医疗器械、缓解病痛、改善机体功能或形态等为目的的诊断或者治
 疗措施。
 
-[^7] 介入治疗即不切开暴露病灶的情况下,在血管、皮肤上作微小通道,或经人体原有的管道,在
+[^7] **介入治疗**即不切开暴露病灶的情况下,在血管、皮肤上作微小通道,或经人体原有的管道,在
 影像设备(血管造影机、透视机、CT、MR、B 超等)的引导下对病灶局部进行治疗的创伤最小的治
 疗方法,包括:心血管介入、外周血管介入、神经血管介入、综合介入。
+
+[^8] **微创手术**是指出院患者在日间手术室或住院部手术室内、麻醉状态下的内科和外科腔镜手术、
+血管内和实质脏器的介入治疗,具有创伤小、疼痛轻、恢复快的特点。
+
+[^9] **四级手术**是指风险高、过程复杂、难度大的手术。参阅《关于印发医疗机构手术分级管理办法
+(试行)的通知》(卫办医政发〔2012〕94 号)。
+
+[^11] 手术并发症是指并发于手术或手术后的疾病或情况,本年度仅统计择期手术后,并发于手术或
+手术后的疾病或情况的人数,包括:手术后出血或血肿、手术后伤口裂开、肺部感染、肺栓塞、
+深静脉血栓、败血症、猝死、手术中发生或由于手术造成的休克、手术后血管并发症、瘘、呼吸
+衰竭、骨折、生理/代谢紊乱、人工气道意外脱出等。参阅《卫生部办公厅关于印发<三级综合医
+院医疗质量管理与控制指标(2011 年版)>的通知》(卫办医政函〔2011〕54 号)和《卫生部办
+公厅关于印发<三级综合医院评审标准实施细则(2011 版)>的通知》(卫办医管发〔2011〕148
+号)。
