--- a/policy/医院管理相关的最新政策表述.md
+++ b/policy/医院管理相关的最新政策表述.md
@@ -15,3 +15,29 @@
     1. 三是**利用信息化手段开展医疗质量管理工作**取得明显成效，能够推动医院评审更加**科学、客观、精细、量化**，应当纳入医院评审工作中。
     1. 四是各地在评审工作中积累了很多先进的经验和做法，需要在评审标准中予以吸纳。
 1. 新标准的修订围绕“医疗质量安全”这条主线，秉承“**继承、发展、创新，兼顾普遍适用与专科特点**”的原则，精简合并条款，推动医院评审由以现场检查、主观定性、集中检查为主的评审形式转向以**日常监测、客观指标、现场检查、定量与定性评价相结合**的工作思路和工作方向，符合当前医院管理工作需要，对于进一步促进医院践行“**三个转变、三个提高**”，努力实现**公立医院高质量发展**具有重要意义
+1. 增加了医院**资源配置、质量、安全、服务、绩效等指标监测**以及**DRG评价、单病种质控和重点医疗技术等日常监测数据**的比重，
+1. 医疗机构要紧紧围绕标准，强化日常管理，充分发挥《标准》在引导医院自我管理和**健康可持续发展**等方面的作用。同时，**不断加强信息化建设，按要求及时、完整、准确的报送重点专业质量控制指标、单病种质控等《标准》中规定的数据信息**，为本机构参加医院评审奠定基础。
+
+
+## 国务院办公厅印发关于加快中医药特色发展若干政策措施的通知 
+
+http://www.gov.cn/zhengce/zhengceku/2021-02/09/content_5586278.htm
+
+1. 强化中医思维培养和中医临床技能培训，并作为学生学业评价主要内容。
+1. 坚持发展中医药师承教育。增加多层次的师承教育项目，扩大师带徒范围和数量，将师承教育贯穿临床实践教学全过程。长期坚持推进名老中医药专家学术经验继承、优秀中医临床人才研修、传承工作室建设等项目。绩效工资分配对承担带徒任务的中医医师适当倾斜。在全国老中医药专家学术经验继承工作中，按程序支持符合条件的继承人以医古文代替外语作为同等学力申请中医专业学位考试科目。（国家中医药局、人力资源社会保障部、教育部、国家卫生健康委、各省级人民政府负责）
+1. 加强中医药人才评价和激励。鼓励各地结合实际，建立中医药优秀人才评价和激励机制。将中医药学才能、医德医风作为中医药人才主要评价标准，将会看病、看好病作为中医医师的主要评价内容。在院士评选、国家重大人才工程等高层次人才评选中，探索中医药人才单列计划、单独评价。（人力资源社会保障部、国家卫生健康委、国家中医药局、工程院、中科院、各省级人民政府分别负责）
+1. 
+
+## 关于加强公立医院运营管理的指导意见
+
+http://www.gov.cn/zhengce/2020-12/26/content_5573494.htm
+
+1. 2016年习近平总书记在全国卫生与健康大会上的讲话指出，要抓好建立现代医院管理制度建设，推动医院管理模式和运行方式转变；要显著提高医院管理的科学化、精细化、信息化水平，规范医疗行为，不断提高服务能力和运行效率。
+1. 2017年《国务院办公厅关于建立现代医院管理制度的指导意见》（国办发〔2017〕67号）提出，要努力实现社会效益与运行效率的有机统一，实现医院治理体系和管理能力现代化。
+1. 近年来，《管理会计基本指引》《国务院办公厅关于加强三级公立医院绩效考核工作的意见》等有关文件提出医院运营效率要体现精细化管理水平，推进业务和财务深度融合。
+1. 目前公立医院收不抵支现象普遍，医院持续良性运营面临挑战，亟需彻底扭转重资源获取轻资源配置、重临床服务轻运营管理的倾向，提升精细化运营管理水平，向强化内部管理要效益。
+1. 为落实有关文件要求，推动公立医院高质量发展，推进管理模式和运行方式加快转变，进一步提高医院运营管理科学化、规范化、精细化、信息化水平，我们结合实际，研究制定了《关于加强公立医院运营管理的指导意见》
+
+1. 公立医院运营管理的概念内涵及任务要求，四方面
+    1. 第一部分介绍了公立医院运营管理的**基本概念、总体要求和基本原则**。（**基本概念**）公立医院运营管理是以全面预算管理和业务流程管理为核心，以全成本管理和绩效管理为工具，对医院内部运营各环节的设计、计划、组织、实施、控制和评价等管理活动的总称，是对医院人、财、物、技术等核心资源进行科学配置、精细管理和有效使用的一系列管理手段和方法。（**总体要求和基本原则**）公立医院运营管理要坚持**公益性、整体性、融合性、成本效率和适应性**五项原则，以**新时期卫生与健康工作方针**和**公立医院事业发展战略规划**为指引，推动**核心业务工作与运营管理工作深度融合**，提升**运营管理效益和投入产出效率**。
+    1. 第二部分介绍了**构建运营管理组织体系**。一是**加强组织建设**。强调医院主要负责人全面负责医院运营管理工作，总会计师协助做好具体工作，各分管院领导对具体工作分工负责。医院应当成立**运营管理委员会**，明确负责运营管理的部门，并充实运营管理部门人员力量。二是**理顺运营机制**。强调医院内部应当强化决策机制，健全分工机制，细化落实机制、实化评价机制，构建反馈机制。三是**完善制度体系**。医院应当建立健全运营管理制度体系，明确组织机构、职责权限、决策机制、业务规范、运营流程等内容，完善人力资源管理、空间和设施设备、绩效、财务、资产、风险防控、信息化等各项管理制度。
